kubernetes/11. ingress/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: html-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /home
            pathType: Prefix
            backend:
              service:
                name: home-service
                port:
                  number: 80
          - path: /mobile
            pathType: Prefix
            backend:
              service:
                name: mobile-service
                port:
                  number: 80
